# KDNA

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.txt  doc.md  docker-compose.yml  doc~  genindex.html  index.html  init.sh  kdna.commands.html  kdna.conf  kdna.conf_utils.html  kdna.connexion_ssh.html  kdna.encrypt.html  kdna.html  kdna.logger.html  kdna.parsing.html  kdna.read_backups.html  kdna.server.html  kdna.ssh.html  kdna.tags.html  kdnaconda.service~  kdnad.service  key.key  main.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  test-e2e.sh  test.conf  test_cypher.txt  tox.ini
.github/workflows/: ci.yml
.ssh/: id_rsa  id_rsa.pub
_modules/: index.html
_sources/: index.rst.txt  kdna.commands.rst.txt  kdna.conf_utils.rst.txt  kdna.connexion_ssh.rst.txt  kdna.logger.rst.txt  kdna.parsing.rst.txt  kdna.rst.txt  kdna.server.rst.txt  kdna.ssh.rst.txt  kdna.tags.rst.txt
docker/: Dockerfile
docs/source/: conf.py  index.rst  kdna.commands.rst  kdna.conf_utils.rst  kdna.encrypt.rst  kdna.read_backups.rst  kdna.rst  kdna.server.rst  modules.rst
kdna/: Backup.py  ConfUtils.py  Server.py  __init__.py  __main__.py  backup.py  conf_utils.py  env.json  main.py  my_file.txt  parser.py  server.py
kdna/autobackup/: __init__.py  autobackup.py
kdna/commands/: README.md  __init__.py  autobackup.py  backup.py  encrypt.py  kdna.py  server.py  tag.py
kdna/conf_utils/: README.md  __init__.py  backup.py  server.py  utils.py
kdna/connexion_ssh/: __init__.py  sshConnect.py
kdna/container/: container.py  ioc.py
kdna/encrypt/: README.md  __init__.py  encrypt.py
kdna/logger/: README.md  logger.py
kdna/parsing/: README.md  REAMDE.md  __init__.py  autobackup.py  parser.py  server.py
kdna/read_backups/: __init__.py  agent.py
kdna/server/: README.md  __init__.py  autobackup_service.py  server.py  server_service.py
kdna/ssh/: README.md  (+2 more)
kdna_service/: README.md  cronstart.sh  doc.md  init.sh  kdna-service.py  kdnad.service  main.py
tests/: main.py  test_encrypt.py  test_main.py
(+31 files in other folders)
