[tool.poetry]
name = "kdna"
version = "0.1.0"
description = ""
authors = ["D3 2023-2026 <polytech-do3@etu.umontpellier.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
fabric = "^3.2.2"
pycryptodome = "^3.19.0"
pylint = "^3.0.2"
mypy = "^1.7.1"
pytest = "^7.4.3"
sphinx = "^7.2.6"
chardet = "^5.2.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-autoapi = "^3.0.0"
m2r2 = "^0.3.3.post2"
pydocstyle = "^6.3.0"
tox = "^4.11.4"


[tool.poetry.group.dev.dependencies]
tox-gh-actions = "^3.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
